Changelog
=========

2014-08-25
----------
* Second Alpha Release 0.4
* Move to paginate from webhelpers.paginate
* Users can now log in via username or email address
* Python 3 compatibale after moving away from webhelpers.paginate


2012-11-28
----------
* First Alpha Release 0.3 - This release should have a fairly stable API
* Hundreds of small and big changes - based on all great feedback we are now 
  using surrogate pkeys instead of natural pkeys for most models. 
  As result of this few methods started accepting id's instead usernames, 
  so consider yourself warned that this release might be bw. incompatible a bit 
  with your application
* At this point all tests should pass on mysql, postgresql, sqlite


2012-06-26
----------

* added some indexes to resource owners
* previous revision ID: 3cfc41c4a5f0

2012-06-25
----------

* dropped groups.id column
* previous revision ID: 53927300c277

2012-06-05
----------

* shrinked integer sized on primary keys
* previous revision ID: 54d08f9adc8c

2012-05-27 version 0.2 First public release
-------------------------------------------

* added proper alembic(pre 0.3.3 trunk) support for multiple alembic migrations via separate versioning table
* please do manual stamp for CURRENT revision ID: 54d08f9adc8c
* changes for first public pypi release
* Possible backwards incompatibility: Remove cache keyword cruft


2012-05-25
----------

* Possible backwards incompatibility: Remove invalidate keyword cruft

2012-03-10
----------

* Add registration date to user model, changed last_login_date to no-timezone type (this seem trivial enough to not faciliate schema change) 
* previous revision ID: 2d472fe79b95

2012-02-19
----------
* Made external identity fields bigger
* previous revision ID: 264049f80948

2012-02-13
----------
* Bumped alembic machinery to 0.2
* Enabled developers to set their own custom password managers
* added ordering column for resources in tree
* Stubs for tree traversal